# ViriyaEngine

./: .gitignore  CMakeLists.txt  README.md  engine_design.txt
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp
Framework/Common/test/: AssetLoaderTest.cpp  CMakeLists.txt
Framework/GeomMath/: CMakeLists.txt  GeomMath.cpp  GeomMath.hpp
Framework/GeomMath/test/: math.result  test.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp
Platform/Linux/: helloengine_opengl.cpp  helloengine_xcb.c
Platform/Windows/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.hpp  WindowsApplication.cpp  WindowsApplication.hpp  helloengine_d2d.cpp
RHI/: CMakeLists.txt
RHI/OpenGL/: CMakeLists.txt  OpenGLGraphicManager.cpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
